week12/advanced2/prolog-interpreter/parser.output
   0  $accept : %entry% $end

   1  toplevel : RULE rule
   2           | RULE fact
   3           | QUERY query
   4           | DOT
   5           | SEMI

   6  query : predicates

   7  fact : predicate DOT

   8  rule : predicate IMPLY predicates DOT

   9  predicates : predicate
  10             | predicate COMMA predicates

  11  predicate : SYMBID LPAR terms RPAR
  12            | SYMBID

  13  terms : term
  14        | term COMMA terms

  15  term : atomic
  16       | SYMBID LPAR symbs RPAR

  17  symbs : atomic
  18        | atomic COMMA symbs

  19  atomic : SYMBID
  20         | VARID

  21  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (21)

	RULE  shift 3
	QUERY  shift 4
	DOT  shift 5
	SEMI  shift 6
	.  error

	toplevel  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	toplevel : RULE . rule  (1)
	toplevel : RULE . fact  (2)

	SYMBID  shift 8
	.  error

	rule  goto 9
	fact  goto 10
	predicate  goto 11


state 4
	toplevel : QUERY . query  (3)

	SYMBID  shift 8
	.  error

	query  goto 12
	predicates  goto 13
	predicate  goto 14


state 5
	toplevel : DOT .  (4)

	.  reduce 4


state 6
	toplevel : SEMI .  (5)

	.  reduce 5


state 7
	%entry% : '\001' toplevel .  (21)

	.  reduce 21


state 8
	predicate : SYMBID . LPAR terms RPAR  (11)
	predicate : SYMBID .  (12)

	LPAR  shift 15
	$end  reduce 12
	IMPLY  reduce 12
	COMMA  reduce 12
	DOT  reduce 12


state 9
	toplevel : RULE rule .  (1)

	.  reduce 1


state 10
	toplevel : RULE fact .  (2)

	.  reduce 2


state 11
	fact : predicate . DOT  (7)
	rule : predicate . IMPLY predicates DOT  (8)

	IMPLY  shift 16
	DOT  shift 17
	.  error


state 12
	toplevel : QUERY query .  (3)

	.  reduce 3


state 13
	query : predicates .  (6)

	.  reduce 6


state 14
	predicates : predicate .  (9)
	predicates : predicate . COMMA predicates  (10)

	COMMA  shift 18
	$end  reduce 9
	DOT  reduce 9


state 15
	predicate : SYMBID LPAR . terms RPAR  (11)

	SYMBID  shift 19
	VARID  shift 20
	.  error

	terms  goto 21
	term  goto 22
	atomic  goto 23


state 16
	rule : predicate IMPLY . predicates DOT  (8)

	SYMBID  shift 8
	.  error

	predicates  goto 24
	predicate  goto 14


state 17
	fact : predicate DOT .  (7)

	.  reduce 7


state 18
	predicates : predicate COMMA . predicates  (10)

	SYMBID  shift 8
	.  error

	predicates  goto 25
	predicate  goto 14


state 19
	term : SYMBID . LPAR symbs RPAR  (16)
	atomic : SYMBID .  (19)

	LPAR  shift 26
	COMMA  reduce 19
	RPAR  reduce 19


state 20
	atomic : VARID .  (20)

	.  reduce 20


state 21
	predicate : SYMBID LPAR terms . RPAR  (11)

	RPAR  shift 27
	.  error


state 22
	terms : term .  (13)
	terms : term . COMMA terms  (14)

	COMMA  shift 28
	RPAR  reduce 13


state 23
	term : atomic .  (15)

	.  reduce 15


state 24
	rule : predicate IMPLY predicates . DOT  (8)

	DOT  shift 29
	.  error


state 25
	predicates : predicate COMMA predicates .  (10)

	.  reduce 10


state 26
	term : SYMBID LPAR . symbs RPAR  (16)

	SYMBID  shift 30
	VARID  shift 20
	.  error

	atomic  goto 31
	symbs  goto 32


state 27
	predicate : SYMBID LPAR terms RPAR .  (11)

	.  reduce 11


state 28
	terms : term COMMA . terms  (14)

	SYMBID  shift 19
	VARID  shift 20
	.  error

	terms  goto 33
	term  goto 22
	atomic  goto 23


state 29
	rule : predicate IMPLY predicates DOT .  (8)

	.  reduce 8


state 30
	atomic : SYMBID .  (19)

	.  reduce 19


state 31
	symbs : atomic .  (17)
	symbs : atomic . COMMA symbs  (18)

	COMMA  shift 34
	RPAR  reduce 17


state 32
	term : SYMBID LPAR symbs . RPAR  (16)

	RPAR  shift 35
	.  error


state 33
	terms : term COMMA terms .  (14)

	.  reduce 14


state 34
	symbs : atomic COMMA . symbs  (18)

	SYMBID  shift 30
	VARID  shift 20
	.  error

	atomic  goto 31
	symbs  goto 36


state 35
	term : SYMBID LPAR symbs RPAR .  (16)

	.  reduce 16


state 36
	symbs : atomic COMMA symbs .  (18)

	.  reduce 18


13 terminals, 12 nonterminals
22 grammar rules, 37 states
